--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ edition = "2024"
 
 [workspace.dependencies]
 thiserror = "2.0.11"
-tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.43.0", features = [
+    "rt-multi-thread",
+    "macros",
+    "io-util",
+    "fs"] }
 tokio-util = { version = "0.7.13", features = ["rt"] }
 futures = "0.3.31"
 serde = { version = "1.0.217", features = ["derive"] }
