--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,7 @@ serde_json = "1.0.138"
 sha3 = "0.10.8"
 anyhow = "1.0.95"
 clap = { version = "4.5.30", features = ["derive"] }
+rand = "0.9.0"
+rand_chacha = "0.9.0"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
