--- a/spalhad-server-bin/Cargo.toml
+++ b/spalhad-server-bin/Cargo.toml
@@ -6,7 +6,9 @@ edition.workspace = true
 [dependencies]
 clap = { workspace = true }
 tokio = { workspace = true }
+serde_json = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+spalhad-spec = { path = "../spalhad-spec" }
 spalhad-server = { path = "../spalhad-server" }
