--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1.43.0", features = [
     "fs"] }
 tokio-util = { version = "0.7.13", features = ["rt"] }
 futures = "0.3.31"
+getrandom = "0.3.1"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 sha3 = "0.10.8"
