--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -17,7 +17,7 @@ fn_single_line = false
 where_single_line = false
 force_explicit_abi = true
 format_strings = true
-format_macro_matchers = false
+format_macro_matchers = true
 format_macro_bodies = true
 hard_tabs = false
 imports_indent = "Block"
