--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ rand = "0.9.0"
 rand_chacha = "0.9.0"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+trait-variant = "0.1.2"
