--- a/spalhad-server/Cargo.toml
+++ b/spalhad-server/Cargo.toml
@@ -13,5 +13,6 @@ tokio = { workspace = true }
 tokio-util = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
+trait-variant = { workspace = true }
 spalhad-spec = { path = "../spalhad-spec" }
 spalhad-client = { path = "../spalhad-client" }
