--- a/spalhad-server/Cargo.toml
+++ b/spalhad-server/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = { workspace = true }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
 anyhow = { workspace = true }
+thiserror = { workspace = true }
 tracing = { workspace = true }
 trait-variant = { workspace = true }
 spalhad-spec = { path = "../spalhad-spec" }
