add call superset proc macro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [
-    "spalhad-actor",
+    "spalhad-actor", "spalhad-actor-macros",
     "spalhad-client",
     "spalhad-client-bin",
     "spalhad-server",
