--- a/spalhad-server/Cargo.toml
+++ b/spalhad-server/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 axum = { version = "0.8.1", features = ["macros"] }
 tower-http = { version = "0.6.2", features = ["trace"] }
 tower-layer = "0.3.3"
+futures = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
