--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,10 @@ services:
         - bash
         - -c
         - |
-          { echo -e "GET /sync/active HTTP/1.0\r\n" >&3 ; \
+          { echo -e "GET /spalhad/v1/sync/active HTTP/1.0\r\n" >&3 ; \
              cat <&3 | grep '{"is_active":true}' ; \
           } 3<> /dev/tcp/localhost/5000
-      interval: 10s
+      interval: 15s
       timeout: 5s
       retries: 5
 
